        warnings.
      Clean up code that computes the length of a netmask.
      Mind netmap support in pcap_lib_version().
    Packet filtering:
      Make the chunk allocator's alignment more general and
        platform-independent.
      IEEE 802.11: Fix three undefined behaviors in grammar.y.
      Fix IPv4 multicast filtering to only include 224.0.0.0/4.
    Linux:
      Fix check for mac80211 phydev.
      Don't create monitor-mode interface if we're capturing on one.
      Expand the table of DSA tag types to include all current types.
      Fix an error message when deleting a monN interface.
      Fix returning PCAP_ERROR_RFMON_NOTSUP with libnl.
      Fix the error message when capure permission is denied.
      Fix the error message if PF_PACKET sockets aren't supported.
      Fix a file descriptor leak in an error case (pull request #1537).
    FreeBSD:
      Fix detection and enablng of zero-copy supporrt.
      Fix errors in the zero-copy code.
    Solaris:
      Fix not to ignore logical interfaces in fad-gifc.c and
        fad-glifc.c.
      Fix attempts to open all-numeric device names with DLPI to
        return "no such device".
      Fix error returns and messages when an interface has no DLPI
        device.
      Return all interfaces in pcap_findalldevs() even if they can't be
        opened.
    HP-UX:
      Fix attempts to open all-numeric device names to return
        "no such device".
      Fix error message if there's no /dev/dlpi device.
      Return all interfaces in pcap_findalldevs() even if they can't be
        opened.
    Windows:
      Fix filtering for VLAN-tagged frames.
      Add support for Npcap's nanosecond-resolution time stamps in
        captures.
      Fix a bug in error message character encoding mapping from UTF-16
        to UTF-8.
    D-Bus:
      Fix message leak.
    Capture file writing:
      Don't close the output stream if it's stdout, just flush it.
    Documentation: